@@ -1,3 +1,11 @@
+2010-01-30  Joern Rennecke  <amylaar@spamcop.net>
+
+	* PR bootstrap/42798
+	* configure.ac: Add AC_CHECK_GNU_SOURCE_DECLS(basename).
+	* aclocal.m4 (AC_CHECK_GNU_SOURCE_DECL): Define.
+	(AC_CHECK_GNU_SOURCE_DECLS): Likewise.
+	* configure, config.in: Regenerate.
+
 2010-01-25  Ian Lance Taylor  <iant@google.com>
 
 	* cp-demangle.c (cplus_demangle_type): Check for invalid type
