@@ -1,3 +1,9 @@
+2010-01-30  Joern Rennecke  <amylaar@spamcop.net>
+
+	PR bootstrap/42798
+	* libiberty.h: Check _GNU_SOURCE to decide wheather to test
+	HAVE_GNU_SOURCE_DECL_BASENAME or HAVE_DECL_BASENAME.
+
 2010-01-13  Joel Brobecker  <brobecker@adacore.com>
 
 	Add new DW_AT_use_GNAT_descriptive_type CU attribute.
